Fixed whitespace below iframe and sidebar resizing issues Resized github logo

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,10 @@ ul {
   margin: auto;
 }
 
+#githublogo {
+  padding-bottom: 5px;
+}
+
 h1 {
   text-align: center;
 }
